--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ nbproject
 # local config
 ########################
 config/local.js
+
+########################
+# Sass 
+########################
+.sass-cache/
