--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "ejs": "0.8.4",
         "optimist": "0.3.4",
         "grunt-browserify2": "0.1.8",
-        "grunt-contrib-compass": "0.6.0"
+        "grunt-contrib-compass": "0.6.0",
+        "underscore": "1.5.2"
     },
     "scripts": {
         "start": "node app.js",
