--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,1 @@
-########################
-# sails
-########################
-.sails
-.waterline
-.rigging
-
-
-########################
-# node.js / npm
-########################
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
-npm-debug.log
-
-
-########################
-# misc / editors
-########################
-*~
-*#
-.DS_STORE
-.netbeans
-nbproject
-.idea
-
-
-########################
-# local config
-########################
-config/local.js
-
-########################
-# Sass 
-########################
-.sass-cache/
+.idea/
